# bangNote

./: local.properties
app/: bangnote.keystore  build.gradle
app/notePC/: CDlgNote.cpp  CDlgNote.h  Resource.h  notePC.cpp  notePC.rc  notePC.sln  notePC.vcxproj  notePC.vcxproj.filters  wrapKey.cpp
app/src/androidTest/java/com/wyhwl/bangnote/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/wyhwl/note/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  COSSMng.cpp  COSSMng.h  native-lib.cpp
app/src/main/cpp/include/alibabacloud/oss/model/: ListObjectsRequest.h
app/src/main/java/com/wyhwl/bangnote/: MainActivity.java  baseSystemUtil.java  dataNoteItem.java  dataNoteList.java  mediaSelectActivity.java  noteAboutActivity.java  noteApplication.java  (+26 more)
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/layout/: activity_launcher.xml  activity_lock_setting.xml  activity_main.xml  activity_media_select.xml  activity_note_about.xml  activity_note_backup.xml  activity_note_calendar.xml  activity_note_edit.xml  activity_note_flash.xml  activity_note_image.xml  activity_note_item.xml  activity_note_list.xml  activity_note_show.xml  activity_note_video.xml  activity_note_view.xml  dialog_wait.xml  fragment_lock.xml  media_select_item.xml  menu_list_item.xml  note_audio_edit.xml  note_audio_music.xml  note_audio_play.xml  note_item_view.xml  note_restore_dlg.xml  note_type_delete.xml  note_type_input.xml  note_type_modify.xml  note_type_move.xml  seekbar_prog.xml  spn_note_type.xml  view_calendar_item.xml
app/src/main/res/menu/: menu_noteedit.xml  menu_notelist.xml  menu_noteview.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: provider_paths.xml
gradle/wrapper/: gradle-wrapper.properties
(+55 files in other folders)
